# mboxer

./: .env.example  Cargo.toml  LICENSE  README.md  attachment.ts  auth.ts  db.ts  deno.jsonc  env.ts  import_map.json  main.ts  main.tsx  message.ts  parse.ts  parse_test.ts
lib/: parser_lib.generated.js  parser_lib_bg.wasm
pages/: Import.tsx  Layout.tsx  Login.tsx  Message.tsx  Messages.tsx
parser_lib/: Cargo.toml
parser_lib/src/: lib.rs
static/: script.js  styles.css
