[package]
name = "parser_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
ammonia = "3.3.0"
mail-parser = { version = "0.8.0", default-features = false }
uuid = { version = "1.2.2", default_features = false, features = ["v5"] }
wasm-bindgen = "=0.2.83"
